# Laboratory_work

./: laba_1.cpp  laba_2.cpp  les.cpp
BancAccount/: task1.cpp
Homeworks(BAP)/Class_dz/: last_task_1  last_task_1.cpp  last_task_2  last_task_2.cpp
Homeworks(BAP)/Files_dz/: book.txt  config.json  config.txt  outFile.txt  products.txt  sensor_data.txt  sensor_report.txt  sorted_products.txt  task_1  task_1.cpp  task_10  task_10.cpp  task_11  task_11.cpp  task_12  task_12.cpp  task_2  task_2.cpp  task_4  task_4.cpp  task_5  task_5.cpp  task_6  task_6.cpp  task_7  task_7.cpp  task_8  task_8.cpp  task_9  task_9.cpp  tempCodeRunnerFile.cpp
Homeworks(BAP)/Files_easydz/: copy.txt  energy_report.txt  file1.txt  file2.txt  input.txt  source.txt  task_1  task_1.cpp  task_10  task_10.cpp  task_11  task_11.cpp  task_2  task_2.cpp  task_3  task_3.cpp  task_4  task_4.cpp  task_5  task_5.cpp  task_6  task_6.cpp  task_7  task_7.cpp  task_8  task_8.cpp  task_9  task_9.cpp  tempCodeRunnerFile.cpp  test9.txt  test_task1.txt  test_task2.txt  test_task3.txt  test_task7.txt  vibration_report.txt
Homeworks(BAP)/Homework_1/: task_1  task_1.cpp  task_10  task_10.cpp  (+19 more)
Laba4(union)/: CMakeLists.txt
Laba4(union)/include/: Analytics.h  DatabaseManager.h  Pair.h
Laba4(union)/src/: Analytics.cpp  Product.cpp
Laboratory/: laba_1.cpp
Laboratory(INF)/: laba_1.cpp
gggg/: ggg.cpp
laba4/: my_program
online-store/: .gitignore  CMakeLists.txt  README.md
online-store/include/: Audit.h  DatabaseConnection.h  Menu.h  Models.h  Users.h
online-store/sql/: functions.sql  procedures.sql  tables.sql  triggers.sql
online-store/src/: Menu.cpp  Users.cpp  main.cpp
РК2+DZ/: рк2.sql
(+193 files in other folders)
